--- a/Aplicacao_Interativa/appsettings.json
+++ b/Aplicacao_Interativa/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DataBase": "Server=PC_DAVID\\MSSQLSERVER01;Database=DB_SistemaTIAI;User Id=sa;Password=1234"
+  },
   "AllowedHosts": "*"
 }
