commit microsoft azure

--- a/Aplicacao_Interativa/appsettings.json
+++ b/Aplicacao_Interativa/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DataBase": "Server=PC_DAVID\\MSSQLSERVER01;Database=DB_SistemaTIAI;User Id=sa;Password=1234"
+    "Default": "Server=barberapp.postgres.database.azure.com;Database=postgres;Port=5432;User Id=barberapp;Password=ads@1234;Ssl Mode=Require;"
   },
   "AllowedHosts": "*"
 }
