--- a/Aplicacao_Interativa/Aplicacao_Interativa.csproj
+++ b/Aplicacao_Interativa/Aplicacao_Interativa.csproj
@@ -8,13 +8,13 @@
 
   <ItemGroup>
     <Compile Remove="NovaPasta1\**" />
+    <Compile Remove="NovaPasta\**" />
     <Content Remove="NovaPasta1\**" />
+    <Content Remove="NovaPasta\**" />
     <EmbeddedResource Remove="NovaPasta1\**" />
+    <EmbeddedResource Remove="NovaPasta\**" />
     <None Remove="NovaPasta1\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Remove="Views\Home\Privacy.cshtml" />
+    <None Remove="NovaPasta\**" />
   </ItemGroup>
 
   <ItemGroup>
