Funcionalidade de Redefinir Senha

--- a/Aplicacao_Interativa/appsettings.json
+++ b/Aplicacao_Interativa/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "SMTP": {
+    "UserName": "agendamentobarber@outlook.com",
+    "Nome": "Agendamento Online",
+    "Host": "smtp-mail.outlook.com",
+    "Senha": "ads@1234",
+    "Porta": 587
+  },
   "AllowedHosts": "*"
 }
