--- a/Aplicacao_Interativa/Aplicacao_Interativa.csproj
+++ b/Aplicacao_Interativa/Aplicacao_Interativa.csproj
@@ -33,4 +33,8 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\fonts\" />
+  </ItemGroup>
+
 </Project>
