--- a/Aplicacao_Interativa/appsettings.json
+++ b/Aplicacao_Interativa/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "conexao com o banco de dados"
+    "DefaultConnection": "server=localhost;initial catalog=ti_aplicacaointerativa;uid=root;pwd=Hacker.123"
   },
   "SMTP": {
     "UserName": "email@email.com",
